...
        case .html:          return "HTML"
        case .java:          return "Java"
        case .javaScript:    return "JavaScript"
        case .kotlin:        return "Kotlin"
        case .modula2:       return "Modula2"
        case .oCaml:         return "OCaml"
        case .objectiveC:    return "Objective-C"
        case .objectiveCpp:  return "Objective-C++"
        case .pascal:        return "Pascal"
        case .perl:          return "Perl"
        case .php:           return "PHP"
        case .powerBuilder:  return "Power Builder"
        case .python:        return "Python"
        case .r:             return "R"
        case .renderMan:     return "RenderMan"
        case .ruby:          return "Ruby"
        case .rust:          return "Rust"
        case .scala:         return "Scala"
        case .shell:         return "Unix Shell"
...
