...
        HStack {
            Image(systemName: "text.magnifyingglass")
                .buttonStyle(.borderless)

            VStack(alignment: .leading) {
                Text(item.summary).font(.subheadline).bold()
                    .accessibilityIdentifier("snippetRowSummaryText")
                HStack {
                    Text(viewModel.dateFormatter.string(from: item.date)).font(.caption)
                    Text(WebCppLanguage.from(rawValue: item.language).displayName).font(.caption)
                }
            }

...
